--- a/ProcesamientoDeImágenes/ProcesamientoDeImágenes/packages.config
+++ b/ProcesamientoDeImágenes/ProcesamientoDeImágenes/packages.config
@@ -4,11 +4,20 @@
   <package id="AForge.Video" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
   <package id="DirectShowLib" version="1.0.0" targetFramework="net472" />
+  <package id="Emgu.CV" version="4.9.0.5494" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="OpenCvSharp4" version="4.10.0.20241108" targetFramework="net472" />
   <package id="OpenCvSharp4.WpfExtensions" version="4.4.0.20200725" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Drawing.Common" version="4.7.2" targetFramework="net472" />
+  <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="8.0.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
