--- a/ProcesamientoDeImágenes/ProcesamientoDeImágenes/packages.config
+++ b/ProcesamientoDeImágenes/ProcesamientoDeImágenes/packages.config
@@ -5,6 +5,7 @@
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
   <package id="DirectShowLib" version="1.0.0" targetFramework="net472" />
   <package id="Emgu.CV" version="4.9.0.5494" targetFramework="net472" />
+  <package id="Extended.Wpf.Toolkit" version="4.7.25104.5739" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="OpenCvSharp4" version="4.10.0.20241108" targetFramework="net48" />
   <package id="OpenCvSharp4.Extensions" version="4.10.0.20241108" targetFramework="net48" />
